resources/css/style.css
/* general rules */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat', sans-serif;
    font-size: 10px;
}

.container {
    height: calc(100vh - 100px);
    display: flex;
}

/* side navbar */
.navbar {
    width: 250px;
    background-color: #000;
}

.align-content {
    width: 90%;
    margin: 0 auto;
}

.navbar #logo {
    width: 60%;
    margin: 3% 5%;
}

/* sections-navbar */
.sections-navbar ul {
    list-style-type: none;
    margin: 2% 10.5%;
}

.sections-navbar ul li a {
    color: rgb(102, 102, 102);
    font-weight: bold;
    font-size: 0.9rem;
    text-decoration: none;
}

/* icons for sections-navbar list */
.bullet-point::marker {
    font-size: 2.5rem;
}

.sections-navbar #home {
    list-style-image: url('../img/home.svg');
}

.sections-navbar #find {
    list-style-image: url('../img/search.svg');
}

.sections-navbar #library {
    list-style-image: url('../img/libreria.svg');
}

/* new-playlist */
.new-playlist {
    font-weight: bold;
}

.new-playlist h3 {
    color: white;
    font-size: 1rem;
    padding: 5% 0;
}

.new-playlist span a {
    color: rgb(102, 102, 102);
    font-size: 0.9rem;
    line-height: 2;
    vertical-align: middle;
    text-decoration: none;
}

.new-playlist .fa-plus-square {
    font-size: 2.5rem;
    vertical-align: middle;
    padding-right: 2%;
    color: rgb(102, 102, 102);
}

.new-playlist div {
    overflow: auto;
    max-height: calc(50vh - 71px)
}

.new-playlist div ul {
    list-style-type: none;
    margin-top: 2%;
    /* height: fit-content;
    max-height: 70%; */
}

.new-playlist div ul li a {
    /* display: block; */
    color: rgb(102, 102, 102);
    text-decoration: none;
    font-size: 0.9rem;
    line-height: 2.5;
}

/* hover on sections-navbar and new-playlist contents */
.sections-navbar ul li a:hover, .new-playlist ul li a:hover, .new-playlist span:hover a, .new-playlist span:hover .fa-plus-square {
    color: white;
}

/* .fixed-container */
.fixed-container {
    width: 250px;
    font-weight: bold;
    height: fit-content;
    position: fixed;
    bottom: 100px;
    left: 0;
    z-index: 1;
    background-color: #000;
}

.app {
    padding: 3% 0;
    border-bottom: 1px solid rgb(102, 102, 102);
}

.app a img {
    width: 7%;
    height: auto;
    vertical-align: middle;
    margin-right: 2%;
}

.app a {
    text-decoration: none;
    color:rgb(102, 102, 102);
    font-size: 0.9rem;
}

.profile {
    color: white;
    font-size: 1rem;
    padding: 3% 0;
}

.profile img {
    width: 10%;
    height: auto;
    vertical-align: middle;
    background-color: rgb(102, 102, 102);
    border-radius: 50%;
    margin-right: 2%;
}

/* hover on app a */
.app a:hover {
    color: white;
}

/* main section */
.main-section {
    width: calc(100% - 250px);
    overflow: auto;
    /* debugging */
    background-color: #141922;
}

/* fixed bar for upgrade */
.upgrade {
    height: 100px;
    width: calc(100% - 250px);
    background-color: rgba(8, 11, 18, 0.5);
    text-align: right;
    /* positioning rules */
    position: fixed;
    top: 0;
    left: 250px;
    z-index: 1;
}

.upgrade>span {
    color: white;
    font-size: 0.7rem;
    display: inline-block;
    white-space: nowrap;
    width: fit-content;
    padding: 1% 5%;
    margin: 2.2% 2.2%;
    border: 1px solid white;
    border-radius: 20px;
}

.upgrade>span:hover {
    font-size: 0.8rem;
}

/* DESKTOP VERSION */
/* main contents */
.main-contents {
    width: 95%;
    margin: 130px auto 0 auto;
}

.main-contents h2 {
    font-size: 1.5rem;
    font-weight: bold;
    color: white;
    padding: 2% 0;
}

/* spotify sections */
.spotify-sections {
    width: 70%;
    margin: 8.5% auto 2% auto;
}

.spotify-sections>ul {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    width: 100%;
}

.spotify-sections ul li {
    list-style-type: none;
}

.spotify-sections ul li a {
    text-decoration: none;
    color: #6d7075;
    font-size: 0.7rem;
    font-weight: bold;
    margin: 5%;
    white-space: nowrap;
}

/* hover on .spotify-sections ul li a */
.spotify-sections ul li a:hover {
    color: white;
}

/* rules for selected section */
#selected::after {
    content: "";
    display: block;
    height: 2px;
    width: 35%;
    margin: 5px auto;
    background-color: #90d32c;
}

/* recently played */
.music {
    display: flex;
    align-items: stretch;
    flex-wrap: wrap;
    width: 100%;
}

.recently-played {
    justify-content: space-between;
}

.col {
    width: calc(90% / 6);
    text-align: center;
}

.col img {
    width: 100%;
    height: auto;
}

.col span {
    display: block;
    /* white-space: nowrap; */
    padding: 5% 0;
    width: 100%;
}

.title {
    color: white;
    font-size: 1rem;
    font-weight: bold;
}

.subtitle {
    color: #696b70;
    font-size: 0.8rem;
}

/* hover on col */
.layer {
    width: 100%;
    height: auto;
    position: relative;
}

.layer>div {
    display: none;
}

.play {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    font-size: 3rem;
    position: absolute;
    top: 0;
    left: 0;
}

.col:hover .layer>div {
    display: block;
}

.col:hover {
    cursor: pointer;
}

/* playlist for user */
.random-playlist {
    margin-top: 2%;
}
.suggestions {
    margin-right: 3%;
}

/* most popular artists */
.rounded {
    border-radius: 50%;
}

/* player */
.player {
    height: 100px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #282828;
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 1;
}

.player>div {
    height: 100px;
}

/* currently-playing */
.currently-playing {
    width: 20%;
    display: flex;
    align-items: center;
}
.currently-playing img {
    width: 15%;
    height: auto;
    margin: 3.5%;
}

.currently-playing .song-details {
    margin-right: 9%;
}

.currently-playing span {
    display: block;
}

.currently-playing .icon {
    color:rgb(102, 102, 102);
    font-size: 0.7rem;
    margin: 5%;
    width: 20%;
}

.fa-heart {
    padding-right: 10%;
}

/* hover on track name */
.track:hover {
    text-decoration: underline;
    cursor: pointer;
    color: white;
    cursor: pointer;
}

/* hover on currently-playing icons */
.fa-heart:hover, .fa-folder:hover {
    color: white;
    cursor: pointer;
}

/* player-controls */
.player-controls {
    width: 50%;
}

/* player-controls controls */
.controls {
    width: 50%;
    margin: 2% auto;
    height: 25px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    color: white;
    font-size: 1.2rem;
}

#play-icon {
    display: block;
    font-size: 1.8rem;
    padding: 0 2%;
}

/* hover on play-icon */
#play-icon:hover {
    font-size: 2rem;
    padding: 0 1.7%;
    cursor: pointer;
}

/* player-controls progress-bar */
.progress-bar {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center; 
}

.progress-bar span {
    color: white;
    font-size: 0.7rem;
}

#bar {
    width: 60%;
    height: 5px;
    background-color: #5a5a5a;
    border-radius: 10px;
}

#bar>div {
    width: 25%;
    height: 5px;
    background-color: #c1c1c1;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.circle {
    color: white;
    display: none;
}

/* hover on progress-bar */
#bar>div:hover {
    background-color: #90d32c;
    cursor: pointer;
}

#bar>div:hover .circle {
    display: block;
    cursor: pointer;
}

/* other controls */
.other-controls {
    width: 15%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    color: white;
    font-size: 0.7rem;
}

